tests/baselines/reference/mappedTypeConstraints2.errors.txt
mappedTypeConstraints2.ts(10,11): error TS2322: Type 'Mapped2<K>[`get${K}`]' is not assignable to type '{ a: K; }'.
  Type 'Mapped2<K>[`get${string}`]' is not assignable to type '{ a: K; }'.
mappedTypeConstraints2.ts(16,11): error TS2322: Type 'Mapped3<K>[Uppercase<K>]' is not assignable to type '{ a: K; }'.
  Type 'Mapped3<K>[Uppercase<string>]' is not assignable to type '{ a: K; }'.
    Type 'Mapped3<K>[string]' is not assignable to type '{ a: K; }'.
mappedTypeConstraints2.ts(42,7): error TS2322: Type 'Mapped6<K>[keyof Mapped6<K>]' is not assignable to type '`_${string}`'.
  Type 'Mapped6<K>[string] | Mapped6<K>[number] | Mapped6<K>[symbol]' is not assignable to type '`_${string}`'.
    Type 'Mapped6<K>[string]' is not assignable to type '`_${string}`'.
mappedTypeConstraints2.ts(51,57): error TS2322: Type 'Foo<T>[`get${T}`]' is not assignable to type 'T'.
  'T' could be instantiated with an arbitrary type which could be unrelated to 'Foo<T>[`get${T}`]'.
mappedTypeConstraints2.ts(82,9): error TS2322: Type 'ObjectWithUnderscoredKeys<K>[`_${K}`]' is not assignable to type 'true'.
  Type 'ObjectWithUnderscoredKeys<K>[`_${string}`]' is not assignable to type 'true'.


==== mappedTypeConstraints2.ts (5 errors) ====
    type Mapped1<K extends string> = { [P in K]: { a: P } };
    
    function f1<K extends string>(obj: Mapped1<K>, key: K) {
        const x: { a: K } = obj[key];
    }
    
    type Mapped2<K extends string> = { [P in K as `get${P}`]: { a: P } };
    
    function f2<K extends string>(obj: Mapped2<K>, key: `get${K}`) {
        const x: { a: K } = obj[key];  // Error
              ~
!!! error TS2322: Type 'Mapped2<K>[`get${K}`]' is not assignable to type '{ a: K; }'.
!!! error TS2322:   Type 'Mapped2<K>[`get${string}`]' is not assignable to type '{ a: K; }'.
    }
    
    type Mapped3<K extends string> = { [P in K as Uppercase<P>]: { a: P } };
    
    function f3<K extends string>(obj: Mapped3<K>, key: Uppercase<K>) {
        const x: { a: K } = obj[key];  // Error
              ~
!!! error TS2322: Type 'Mapped3<K>[Uppercase<K>]' is not assignable to type '{ a: K; }'.
!!! error TS2322:   Type 'Mapped3<K>[Uppercase<string>]' is not assignable to type '{ a: K; }'.
!!! error TS2322:     Type 'Mapped3<K>[string]' is not assignable to type '{ a: K; }'.
    }
    
    type Mapped4<K extends `_${string}`> = {
      [P in K]: P;
    };
    
    function f4<K extends `_${string}`>(obj: Mapped4<K>, key: keyof Mapped4<K>) {
      let s: `_${string}` = obj[key];
    }
    
    type Mapped5<K extends string> = {
      [P in K as P extends `_${string}` ? P : never]: P;
    };
    
    function f5<K extends string>(obj: Mapped5<K>, key: keyof Mapped5<K>) {
      let s: `_${string}` = obj[key];
    }
    
    // repro from #53066#issuecomment-1913384757
    
    type Mapped6<K extends string> = {
      [P in K as `_${P}`]: P;
    };
    
    function f6<K extends string>(obj: Mapped6<K>, key: keyof Mapped6<K>) {
      let s: `_${string}` = obj[key]; // Error
          ~
!!! error TS2322: Type 'Mapped6<K>[keyof Mapped6<K>]' is not assignable to type '`_${string}`'.
!!! error TS2322:   Type 'Mapped6<K>[string] | Mapped6<K>[number] | Mapped6<K>[symbol]' is not assignable to type '`_${string}`'.
!!! error TS2322:     Type 'Mapped6<K>[string]' is not assignable to type '`_${string}`'.
    }
    
    // Repro from #47794
    
    type Foo<T extends string> = {
        [RemappedT in T as `get${RemappedT}`]: RemappedT;
    };
    
    const get = <T extends string>(t: T, foo: Foo<T>): T => foo[`get${t}`];  // Type 'Foo<T>[`get${T}`]' is not assignable to type 'T'
                                                            ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Foo<T>[`get${T}`]' is not assignable to type 'T'.
!!! error TS2322:   'T' could be instantiated with an arbitrary type which could be unrelated to 'Foo<T>[`get${T}`]'.
    
    // Repro from #48626
    
    interface Bounds {
        min: number;
        max: number;
    }
    
    type NumericBoundsOf<T> = {
        [K in keyof T as T[K] extends number | undefined ? K : never]: Bounds;
    }
    
    function validate<T extends object>(obj: T, bounds: NumericBoundsOf<T>) {
        for (const [key, val] of Object.entries(obj)) {
            const boundsForKey = bounds[key as keyof NumericBoundsOf<T>];
            if (boundsForKey) {
                const { min, max } = boundsForKey;
                if (min > val || max < val) return false;
            }
        }
        return true;
    }
    
    // repro from #50030
    
    type ObjectWithUnderscoredKeys<K extends string> = {
        [k in K as `_${k}`]: true;
    };
    
    function genericTest<K extends string>(objectWithUnderscoredKeys: ObjectWithUnderscoredKeys<K>, key: K) {
      const shouldBeTrue: true = objectWithUnderscoredKeys[`_${key}`]; // assignability fails here, but ideally should not
            ~~~~~~~~~~~~
!!! error TS2322: Type 'ObjectWithUnderscoredKeys<K>[`_${K}`]' is not assignable to type 'true'.
!!! error TS2322:   Type 'ObjectWithUnderscoredKeys<K>[`_${string}`]' is not assignable to type 'true'.
    }
    